@@ -23,6 +23,7 @@
 #include "GraphicsContext.h"
 #include "FrameView.h"
 #include "NotImplemented.h"
+#include "ScrollbarTheme.h"
 #include "gtkdrawing.h"
 
 #include <gtk/gtk.h>
@@ -56,8 +57,8 @@ PlatformScrollbar::PlatformScrollbar(ScrollbarClient* client, ScrollbarOrientati
      * assign a sane default width and height to the ScrollBar, otherwise
      * we will end up with a 0 width scrollbar.
      */
-    resize(PlatformScrollbar::horizontalScrollbarHeight(),
-           PlatformScrollbar::verticalScrollbarWidth());
+    resize(ScrollbarTheme::nativeTheme()->scrollbarThickness(),
+           ScrollbarTheme::nativeTheme()->scrollbarThickness());
 }
 
 PlatformScrollbar::~PlatformScrollbar()
