@@ -1,3 +1,12 @@
+2008-09-13  Jan Michael Alonzo  <jmalonzo@webkit.org>
+
+        Gtk build fix, not reviewed.
+
+        * platform/gtk/PlatformScrollBarGtk.cpp:
+        (PlatformScrollbar::PlatformScrollbar):
+        * platform/gtk/ScrollViewGtk.cpp:
+        (WebCore::ScrollView::updateScrollbars):
+
 2008-09-13  Dave Hyatt  <hyatt@apple.com>
 
         Remove scrollbar's setRect method.  Clients can now just call setFrameGeometry (the corresponding Widget) method
